# MCP-Builder

./: LICENSE  README.md  create_test.py  pyproject.toml
examples/: ai_usage.md  github_usage.md  interactive_demo.md
mcp_builder/: __init__.py
mcp_builder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp_builder/analyzers/: __init__.py  models.py  signals.py
mcp_builder/cli/: __init__.py  main.py
mcp_builder/github/: __init__.py  client.py  cloner.py  enricher.py  models.py
mcp_builder/ingestion/: __init__.py  models.py  walker.py
mcp_builder/intelligence/: __init__.py  anthropic_engine.py  base.py  factory.py  local_llm.py  mock.py  models.py  openai_engine.py  selector.py
mcp_builder/mcp/: __init__.py  generator.py  schemas.py
test_repo/: README.md  main.py
tests/: __init__.py  test_ai_integration.py  test_basic.py  test_github_integration.py
